force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Custom_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Custom_DateTime__c</fullName>
    <label>Custom DateTime</label>
    <type>DateTime</type>
</CustomField>