force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Custom_Formula_Custom_Num_10__c.field-meta.xml
<CustomField>
    <fullName>Custom_Formula_Custom_Num_10__c</fullName>
    <formula>Custom_Number__c * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Formula (Custom Num * 10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>