force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Custom_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Custom_Multi_Select__c</fullName>
    <label>Custom Multi Select</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
            <value>
                <fullName>XX-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>