force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Custom_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Custom_Rollup__c</fullName>
    <label>Custom Rollup</label>
    <summaryForeignKey>TASKRAY__trBaseline_Task_Group__c.TASKRAY__trTaskGroup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>