force-app/main/default/objects/TASKRAY__trTaskGroup__c/fields/Custom_Text_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text_Encrypted__c</fullName>
    <label>Custom Text Encrypted</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>